[gd_scene load_steps=8 format=3 uid="uid://btg3qd8eld1mm"]

[ext_resource type="Script" uid="uid://ch5h4p1o54whq" path="res://resources/gardens/garden.gd" id="1_5owem"]
[ext_resource type="Script" uid="uid://bb3nsq54104g" path="res://resources/gardens/garden_layout.gd" id="2_8g7o4"]
[ext_resource type="Texture2D" uid="uid://b5kildofgmthb" path="res://assets/gardens/gardens/garden_01_open.png" id="3_p7iv3"]
[ext_resource type="PackedScene" uid="uid://delcgui3v0eek" path="res://sources/lesson_screen/lesson_button.tscn" id="4_epm30"]
[ext_resource type="Material" uid="uid://djusd5bu6780j" path="res://resources/gardens/flower_material.tres" id="5_76gol"]
[ext_resource type="Texture2D" uid="uid://dg4wcuidmagd8" path="res://assets/gardens/flowers/plant_03_01_not_started.png" id="8_tdxbf"]

[sub_resource type="Resource" id="Resource_pwltf"]
script = ExtResource("2_8g7o4")
flowers_export = Array[Dictionary]([{
"color": 2,
"position": Vector2i(500, 0),
"type": 0
}])
lesson_buttons_export = Array[Dictionary]([{
"path_out_position": Vector2i(0, 0),
"position": Vector2i(0, 0)
}])

[node name="Garden" type="Control"]
custom_minimum_size = Vector2(2400, 2.08165e-12)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5owem")
garden_layout = SubResource("Resource_pwltf")
garden_colors = Array[Color]([Color(0.588235, 0.439216, 0.878431, 1), Color(1, 0.909804, 0.137255, 1), Color(0.929412, 0.603922, 0.709804, 1), Color(0.658824, 0.262745, 0.286275, 1), Color(0.247059, 0.196078, 0.647059, 1), Color(0.619608, 0.976471, 0.670588, 1), Color(0.764706, 0.760784, 0.768627, 1), Color(1, 0.686275, 0.341176, 1), Color(0.305882, 0.996078, 0.894118, 1), Color(0.478431, 0.819608, 1, 1), Color(0.764706, 0.760784, 0.768627, 1), Color(1, 0.909804, 0.137255, 1), Color(0.658824, 0.262745, 0.286275, 1), Color(0.929412, 0.603922, 0.709804, 1), Color(0.619608, 0.976471, 0.670588, 1), Color(0.247059, 0.196078, 0.647059, 1), Color(0.305882, 0.996078, 0.894118, 1), Color(0.478431, 0.819608, 1, 1), Color(1, 0.686275, 0.341176, 1), Color(0.588235, 0.439216, 0.878431, 1)])

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_p7iv3")
expand_mode = 1

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button1" parent="Buttons" instance=ExtResource("4_epm30")]
unique_name_in_owner = true
layout_mode = 0
completed_color = Color(0.588235, 0.439216, 0.878431, 1)

[node name="Button2" parent="Buttons" instance=ExtResource("4_epm30")]
unique_name_in_owner = true
visible = false
layout_mode = 0
completed_color = Color(0.588235, 0.439216, 0.878431, 1)

[node name="Button3" parent="Buttons" instance=ExtResource("4_epm30")]
unique_name_in_owner = true
visible = false
layout_mode = 0
completed_color = Color(0.588235, 0.439216, 0.878431, 1)

[node name="Button4" parent="Buttons" instance=ExtResource("4_epm30")]
unique_name_in_owner = true
visible = false
layout_mode = 0
completed_color = Color(0.588235, 0.439216, 0.878431, 1)

[node name="Flowers" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Flower1" type="TextureRect" parent="Flowers"]
unique_name_in_owner = true
z_index = 1
material = ExtResource("5_76gol")
layout_mode = 0
offset_left = 426.5
offset_top = -90.0
offset_right = 573.5
pivot_offset = Vector2(73.5, 90)
texture = ExtResource("8_tdxbf")

[node name="Flower2" type="TextureRect" parent="Flowers"]
unique_name_in_owner = true
z_index = 1
material = ExtResource("5_76gol")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Flower3" type="TextureRect" parent="Flowers"]
unique_name_in_owner = true
z_index = 1
material = ExtResource("5_76gol")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Flower4" type="TextureRect" parent="Flowers"]
unique_name_in_owner = true
z_index = 1
material = ExtResource("5_76gol")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Flower5" type="TextureRect" parent="Flowers"]
unique_name_in_owner = true
z_index = 1
material = ExtResource("5_76gol")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
